--- a/multi-select/index.html
+++ b/multi-select/index.html
@@ -15,6 +15,8 @@
       var myTextInput = document.getElementById('myTextInput');
       myTextInput ? (myTextInput.maxLength = charLimit) : '';
 
+      console.log(charLimit, myTextInput);
+
       JFCustomWidget.subscribe('submit', () => {
         var data = {
           valid: true,
